:bug: Fixed tooltip issues with it squishing and displaying when the user dragged

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,13 @@ button, input[type="submit"], input[type="reset"] {
 	cursor: pointer;
 	outline: inherit;
 }
+
+.displayBlock {
+	display: block;
+	opacity: 1;
+}
+
+.displayNone {
+	display: none;
+	opacity: 0;
+}
